Change controllers to use custom mappers.