@@ -4,8 +4,10 @@ import com.attendify.backend.domain.Company;
 import com.attendify.backend.domain.Participant;
 import com.attendify.backend.domain.Person;
 import com.attendify.backend.dto.CompanyDTO;
+import com.attendify.backend.dto.ParticipantDTO;
 import com.attendify.backend.dto.ParticipantTypeDTO;
 import com.attendify.backend.dto.PersonDTO;
+import com.attendify.backend.mapper.ParticipantMapper;
 import com.attendify.backend.service.ParticipantService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
@@ -16,7 +18,6 @@ import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -25,7 +26,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/participants")
@@ -33,29 +33,7 @@ import java.util.stream.Collectors;
 @Tag(name = "Participant Management", description = "APIs for managing participants (persons and companies).")
 public class ParticipantController {
     private final ParticipantService participantService;
-    private final ModelMapper modelMapper;
-
-    private static Map<String, Object> applyParticipant(Participant participant) {
-        Map<String, Object> participantMap = new HashMap<>();
-        participantMap.put("id", participant.getId());
-
-        if (participant instanceof Person person) {
-            participantMap.put("type", "PERSON");
-            participantMap.put("firstName", person.getFirstName());
-            participantMap.put("lastName", person.getLastName());
-            participantMap.put("personalCode", person.getPersonalCode());
-        } else if (participant instanceof Company company) {
-            participantMap.put("type", "COMPANY");
-            participantMap.put("companyName", company.getCompanyName());
-            participantMap.put("registrationCode", company.getRegistrationCode());
-            participantMap.put("participantCount", company.getParticipantCount());
-        }
-
-        participantMap.put("paymentMethod", participant.getPaymentMethod());
-        participantMap.put("additionalInfo", participant.getAdditionalInfo());
-
-        return participantMap;
-    }
+    private final ParticipantMapper participantMapper;
 
     @Operation(summary = "Retrieve all participants", description = "Fetches a list of all participants, including both persons and companies.")
     @ApiResponses({
@@ -63,27 +41,11 @@ public class ParticipantController {
                     content = @Content(schema = @Schema(implementation = Map.class)))
     })
     @GetMapping
-    public ResponseEntity<List<Map<String, Object>>> getAllParticipants() {
-        List<Map<String, Object>> participantDTOs = participantService.getAllParticipants().stream()
-                .map(ParticipantController::applyParticipant)
-                .collect(Collectors.toList());
-
+    public ResponseEntity<List<ParticipantDTO>> getAllParticipants() {
+        List<ParticipantDTO> participantDTOs = participantService.getAllParticipants().stream()
+                .map(participantMapper::toDto)
+                .toList();
         return ResponseEntity.ok(participantDTOs);
-    }
-
-    @Operation(summary = "Retrieve a participant by ID", description = "Fetches details of a specific participant (person or company) by their ID.")
-    @ApiResponses({
-            @ApiResponse(responseCode = "200", description = "Successfully retrieved participant",
-                    content = @Content(schema = @Schema(implementation = Map.class))),
-            @ApiResponse(responseCode = "404", description = "Participant not found")
-    })
-    @GetMapping("/{id}")
-    public ResponseEntity<Map<String, Object>> getParticipantById(
-            @Parameter(description = "ID of the participant to retrieve", example = "1") @PathVariable Long id) {
-        Participant participant = participantService.getParticipantById(id);
-        Map<String, Object> participantMap = applyParticipant(participant);
-
-        return ResponseEntity.ok(participantMap);
     }
 
     @Operation(summary = "Fetch participant form options", description = "Returns available participant types and payment methods based on the provided type.")
@@ -110,11 +72,11 @@ public class ParticipantController {
     @PostMapping("/persons")
     public ResponseEntity<PersonDTO> createPerson(
             @Valid @RequestBody @Schema(description = "Person details") PersonDTO personDTO) {
-        Person person = modelMapper.map(personDTO, Person.class);
+        Person person = participantMapper.personDtoToPerson(personDTO);
         Person createdPerson = participantService.createPerson(person);
         return ResponseEntity
                 .status(HttpStatus.CREATED)
-                .body(modelMapper.map(createdPerson, PersonDTO.class));
+                .body(participantMapper.personToPersonDto(createdPerson));
     }
 
     @Operation(summary = "Create a new company", description = "Creates a new company participant with the provided details.")
@@ -126,11 +88,11 @@ public class ParticipantController {
     @PostMapping("/companies")
     public ResponseEntity<CompanyDTO> createCompany(
             @Valid @RequestBody @Schema(description = "Company details") CompanyDTO companyDTO) {
-        Company company = modelMapper.map(companyDTO, Company.class);
+        Company company = participantMapper.companyDtoToCompany(companyDTO);
         Company createdCompany = participantService.createCompany(company);
         return ResponseEntity
                 .status(HttpStatus.CREATED)
-                .body(modelMapper.map(createdCompany, CompanyDTO.class));
+                .body(participantMapper.companyToCompanyDto(createdCompany));
     }
 
     @Operation(summary = "Update a person", description = "Updates an existing person participant with the provided details.")
@@ -144,9 +106,9 @@ public class ParticipantController {
     public ResponseEntity<PersonDTO> updatePerson(
             @Parameter(description = "ID of the person to update", example = "1") @PathVariable Long id,
             @Valid @RequestBody @Schema(description = "Updated person details") PersonDTO personDTO) {
-        Person personDetails = modelMapper.map(personDTO, Person.class);
+        Person personDetails = participantMapper.personDtoToPerson(personDTO);
         Person updatedPerson = participantService.updatePerson(id, personDetails);
-        return ResponseEntity.ok(modelMapper.map(updatedPerson, PersonDTO.class));
+        return ResponseEntity.ok(participantMapper.personToPersonDto(updatedPerson));
     }
 
     @Operation(summary = "Update a company", description = "Updates an existing company participant with the provided details.")
@@ -160,9 +122,25 @@ public class ParticipantController {
     public ResponseEntity<CompanyDTO> updateCompany(
             @Parameter(description = "ID of the company to update", example = "1") @PathVariable Long id,
             @Valid @RequestBody @Schema(description = "Updated company details") CompanyDTO companyDTO) {
-        Company companyDetails = modelMapper.map(companyDTO, Company.class);
+        Company companyDetails = participantMapper.companyDtoToCompany(companyDTO);
         Company updatedCompany = participantService.updateCompany(id, companyDetails);
-        return ResponseEntity.ok(modelMapper.map(updatedCompany, CompanyDTO.class));
+        return ResponseEntity.ok(participantMapper.companyToCompanyDto(updatedCompany));
+    }
+
+    @Operation(summary = "Retrieve a participant by ID",
+            description = "Fetches detailed information about a specific participant (person or company)")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Successfully retrieved participant",
+                    content = @Content(schema = @Schema(implementation = ParticipantDTO.class))),
+            @ApiResponse(responseCode = "404", description = "Participant not found")
+    })
+    @GetMapping("/{id}")
+    public ResponseEntity<ParticipantDTO> getParticipant(
+            @Parameter(description = "ID of the participant to retrieve", example = "1")
+            @PathVariable Long id) {
+
+        Participant participant = participantService.getParticipantById(id);
+        return ResponseEntity.ok(participantMapper.toDto(participant));
     }
 
     @Operation(summary = "Delete a participant", description = "Deletes a participant (person or company) by their ID.")
